<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <EditText
        android:id="@+id/etVehicleName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Vehicle Name" />

    <EditText
        android:id="@+id/etLicensePlate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="License Plate"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/etVin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="VIN Number"
        android:layout_marginTop="16dp"/>
    <RadioGroup
        android:id="@+id/radioGroupVisibility"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <RadioButton
            android:id="@+id/radioPublic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Public" />

        <RadioButton
            android:id="@+id/radioPrivate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Private"
            android:layout_marginStart="24dp" />
    </RadioGroup>


    <Button
        android:id="@+id/btnSaveVehicle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Save Vehicle"
        android:layout_marginTop="24dp" />
</LinearLayout>
