...
<!--                android:layout_height="30dp"-->
<!--                android:layout_marginEnd="18dp"-->
<!--                android:contentDescription="Notifications"-->
<!--                app:srcCompat="@drawable/notify_icon" />-->

            <ImageView
                android:id="@+id/iv_profile_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="40dp"
                android:contentDescription="Profile"
                android:src="@drawable/ic_profile" />
...
